--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wikipedia Article Generator</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
+    <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
     <style>
         body {
             display: flex;
@@ -19,11 +20,11 @@
         .container {
             text-align: center;
             background: white;
-            padding: 20px; /* Reduced padding for better view on small screens */
+            padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 600px;
-            width: 90%; /* Adjusted width for responsiveness */
+            width: 90%;
         }
 
         .title {
@@ -86,26 +87,34 @@
     </div>
 
     <script>
+        const AdController = window.Adsgram.init({ blockId: "151" });
+
         function generateArticle() {
             const button = document.getElementById('generate-btn');
             button.classList.add('loading');
 
-            fetch('https://en.wikipedia.org/api/rest_v1/page/random/summary')
-                .then(response => response.json())
-                .then(data => {
-                    const articleDiv = document.getElementById('article');
-                    articleDiv.innerHTML = `
-                        <h2>${data.title}</h2>
-                        <p>${data.extract}</p>
-                        <a href="${data.content_urls.desktop.page}" target="_blank">Read more</a>
-                    `;
-                    button.classList.remove('loading');
-                })
-                .catch(error => {
-                    console.error('Error fetching the article:', error);
-                    button.classList.remove('loading');
-                });
+            AdController.show().then(() => {
+                fetch('https://en.wikipedia.org/api/rest_v1/page/random/summary')
+                    .then(response => response.json())
+                    .then(data => {
+                        const articleDiv = document.getElementById('article');
+                        articleDiv.innerHTML = `
+                            <h2>${data.title}</h2>
+                            <p>${data.extract}</p>
+                            <a href="${data.content_urls.desktop.page}" target="_blank">Read more</a>
+                        `;
+                        button.classList.remove('loading');
+                    })
+                    .catch(error => {
+                        console.error('Error fetching the article:', error);
+                        button.classList.remove('loading');
+                    });
+            }).catch(error => {
+                console.error('Error showing the ad:', error);
+                button.classList.remove('loading');
+            });
         }
     </script>
 </body>
 </html>
+
