--- a/index.html
+++ b/index.html
@@ -87,34 +87,42 @@
     </div>
 
     <script>
+        // Initialize Adsgram SDK
         const AdController = window.Adsgram.init({ blockId: "151" });
 
         function generateArticle() {
             const button = document.getElementById('generate-btn');
             button.classList.add('loading');
 
-            AdController.show().then(() => {
-                fetch('https://en.wikipedia.org/api/rest_v1/page/random/summary')
-                    .then(response => response.json())
-                    .then(data => {
-                        const articleDiv = document.getElementById('article');
-                        articleDiv.innerHTML = `
-                            <h2>${data.title}</h2>
-                            <p>${data.extract}</p>
-                            <a href="${data.content_urls.desktop.page}" target="_blank">Read more</a>
-                        `;
-                        button.classList.remove('loading');
-                    })
-                    .catch(error => {
-                        console.error('Error fetching the article:', error);
-                        button.classList.remove('loading');
-                    });
+            AdController.show().then(result => {
+                if (result.done) {
+                    fetchArticle();
+                } else {
+                    console.warn('Ad was not watched till the end.');
+                }
+                button.classList.remove('loading');
             }).catch(error => {
                 console.error('Error showing the ad:', error);
                 button.classList.remove('loading');
+                fetchArticle();
             });
+        }
+
+        function fetchArticle() {
+            fetch('https://en.wikipedia.org/api/rest_v1/page/random/summary')
+                .then(response => response.json())
+                .then(data => {
+                    const articleDiv = document.getElementById('article');
+                    articleDiv.innerHTML = `
+                        <h2>${data.title}</h2>
+                        <p>${data.extract}</p>
+                        <a href="${data.content_urls.desktop.page}" target="_blank">Read more</a>
+                    `;
+                })
+                .catch(error => {
+                    console.error('Error fetching the article:', error);
+                });
         }
     </script>
 </body>
 </html>
-
